# code-base-investigator

./: .bandit  .gitignore  .pep8  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  analysis.html  cmd.html  codebasin.py  compilation-databases.html  emulating-compiler-behavior.html  excluding-files.html  features.html  genindex.html  index.html  notices-and-disclaimers.html  objects.inv  pyproject.toml  sample-code-base.html  search.html  searchindex.js  setup.py  setup_git_hooks.sh  sloc_translate.py  specialization.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-coverage.py  commit-signoff-check.yml  coverage.yml  run-precommit.yml  run-unittest.yml
_sources/: analysis.rst.txt  cmd.rst.txt  features.rst.txt  sample-code-base.rst.txt
codebasin/: __init__.py  __main__.py  c_source.py  cli.py  config.py  file_parser.py  file_source.py  finder.py  language.py  platform.py  preprocessor.py  report.py  source.py  tree.py  util.py  walkers.py
codebasin/_detail/: __init__.py  logging.py
codebasin/compilers/: clang.toml  gnu.toml  intel.toml  nvidia.toml
codebasin/coverage/: __main__.py
codebasin/schema/: analysis.schema  cbiconfig.schema  compilation-database.schema  config.schema  coverage-0.1.0.schema  coverage.schema  importcfg.schema
codebasin/source/: __init__.py
codebasin/walkers/: __init__.py  exporter.py  platform_mapper.py  source_printer.py  tree_associator.py  tree_mapper.py  tree_printer.py  tree_walker.py
docs/: README.md  configuration.md
docs/sample-code-base/src/: CMakeLists.txt  main.cpp
docs/sample-code-base/src/cpu/: foo.cpp
docs/sample-code-base/src/gpu/: foo.cpp
docs/source/: analysis.rst  cmd.rst  compilation-databases.rst  conf.py  emulating-compiler-behavior.rst  excluding-files.rst  features.rst  index.rst  notices-and-disclaimers.rst  specialization.rst
etc/: README.md  coverage.py  guess_info.py  preprocess.py  sloc_translate.py
examples/: README.md
examples/disjoint-source/: README.md  disjoint-source.yaml
examples/divergent-source/: README.md  divergent-source.yaml  histogram.h  main.cpp  makefile  private_histogram.cpp  shared_histogram.cpp
examples/single-source/: README.md  main.cpp  makefile  (+1 more)
hooks/: post-commit  pre-commit
(+109 files in other folders)
